# AI_Assistant

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
autogen_assistant/: main.py  pyproject.toml
langchain_chatbot/: main.py  pyproject.toml
rasa_llm/: config.yml  main.py  pyproject.toml
rasa_llm/domain/: remove_contact.yml
src/: app.py
src/document_processor/: processor.py
src/models/: ollama_client.py
src/utils/: qa_handler.py
tests/: test_document_processor.py  test_ollama_client.py
